# TIM-VX

./: .bazelrc  .clang-format  .gitignore  Android.mk  BUILD  BUILD.bazel  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  WORKSPACE  bazel-TIM-VX  gen_vsi_feat_ops_def.sh
samples/: CMakeLists.txt
samples/benchmark_test/: BUILD  CMakeLists.txt  benchmark_test.cc
samples/custom_lenet/: CMakeLists.txt  custom_softmax.cc  custom_softmax.h  lenet_asymu8.cc  lenet_asymu8_weights.h
samples/custom_op_test/: CMakeLists.txt  custom_gemm.cc  custom_gemm.h  custom_op_test.cc
samples/grpc/: CMakeLists.txt  README.txt  grpc_multi_device.cc  remote_service_demo.cc
samples/lenet/: CMakeLists.txt  lenet_asymu8.cc  lenet_asymu8_weights.h
samples/lenet_lite/: BUILD  CMakeLists.txt  lenet_lite_asymu8.cc
samples/lenet_multi_device/: BUILD  CMakeLists.txt  lenet.cc  lenet.h  lenet_asymu8.cc  lenet_multi_device.cc
samples/lite_multi_device/: CMakeLists.txt  lite_multi_device.cc
samples/metax_343/: CMakeLists.txt  avgReshapMatmul.cc
samples/multi_device/: CMakeLists.txt  README  multi_device.cc  multi_device_demo.cc  vx_lenet.cc  vx_lenet.h  vx_mobilenet.cc  vx_mobilenet.h  vx_resnet50.cc  vx_resnet50.h
samples/multi_device/lenet/: lenet.export.data
samples/multi_thread_test/: BUILD  CMakeLists.txt  multi_thread_test.cc
samples/my_lenet/: CMakeLists.txt  custom_softmax.h  lenet_asymu8.cc
samples/nbg_runner/: BUILD  CMakeLists.txt  nbg_runner_main.cc
samples/nbg_runner_pybind/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
samples/nbg_runner_pybind/cmake/modules/: FindPyBind11.cmake  FindVivanteSDK.cmake
samples/nbg_runner_pybind/examples/: demo.py  imagenet1k.py
samples/nbg_runner_pybind/examples/models/: conv2d_relu_maxpool2d_fp32.nbg
samples/nbg_runner_pybind/python/nbg_runner/: __init__.py
samples/nbg_runner_pybind/src/: CMakeLists.txt  nbg_runner_pybind.cpp
samples/nbg_runner_pybind/src/vx/: CMakeLists.txt  ovx_executor.cpp  ovx_executor.hpp  utils.hpp
samples/platform_sample/: CMakeLists.txt  README  platform_sample.cc
src/pytim/: CMakeLists.txt  readme.md
src/pytim/examples/api_test/: lenet.py
src/pytim/examples/lenet_test/: input.npy  lenet.npy  lenet.py  lenet_test.py  lenet_test_pytim.py  lenet_test_rknn.py
src/pytim/examples/rknn_test/: lenet.rknn  lenet_random_input.npy  lenet_test_pytim.py  lenet_test_rknn.py  rknn_test.py  scrfd_test_new.py  scrfd_test_pytim.py  scrfd_test_rknn.py
src/pytim/examples/scrfd_test/: scrfd.rknn  scrfd_test_pytim.py  scrfd_test_rknn.py  utils.py
src/pytim/examples/squeezenet_test/: squeezenet.rknn  squeezenet_test_pytim.py  squeezenet_test_rknn.py
src/pytim/pytim/: __init__.py  common.py  engine.py  operations.py  version.py
src/pytim/pytim/frontends/: __init__.py  rknn_converter.py  rknn_parser.py
src/pytim/pytim/timvx/: __init__.py  common.py  engine.py
src/pytim/src/: tensor_info.cpp  tensor_info.h  timvx.cpp  timvx_engine.cpp  timvx_engine.h
src/pytim/src/timvx_ops/: activation_op.cpp  activation_op.h  concat_op.cpp  concat_op.h  conv2d_op.cpp  conv2d_op.h  eltwise_op.cpp  eltwise_op.h  fullyconnected_op.cpp  fullyconnected_op.h  op_creator.cpp  op_creator.h  pool2d_op.cpp  pool2d_op.h  reshape_op.cpp  reshape_op.h  resize_op.cpp  resize_op.h  softmax_op.cpp  softmax_op.h  transpose_op.cpp  transpose_op.h
src/tim/: CMakeLists.txt
src/tim/fuse/: batch_fuse.cc  batch_fuse_context.h  batch_fuse_test.cc
src/tim/fuse/ops/: activation_batch_fuse.h  concat_batch_fuse.h  conv2d_batch_fuse.h  elementwise_batch_fuse.h  fullyconnected_batch_fuse.h  op_batch_fuse.cc  op_batch_fuse.h  pad_batch_fuse.h  pad_v2_batch_fuse.h  pool2d_batch_fuse.h  reduce_batch_fuse.h  reshape_batch_fuse.h  transpose_batch_fuse.h
src/tim/layout_infer/: layout_infer_context.h  layout_inference.cc  layout_inference_test.cc  permute_vector.h
src/tim/layout_infer/ops/: activation_layout_inference.h  concat_layout_inferene.h  conv2d_layout_inference.h  elementwise_layout_inference.h  op_layout_inference.cc  op_layout_inference.h  pool2d_layout_inference.h  reduce_layout_inference.h  reshape_layout_inference.h  simple_ops_layout_inference.h  softmax_layout_inference.h  squeeze_layout_inference.h  stack_layout_inference.h
src/tim/lite/: execution.cc  execution_private.h  handle.cc  handle_private.h
src/tim/transform/: average_pool_layout_infer_test.cc  layout_infer_context.h  layout_inference.cc  layout_inference_test.cc  mean_stddev_normalize_fusion.cc  pad_layout_inference_test.cc  permute_vector.h  prelu_layout_inference_test.cc  reduce_layout_inference_test.cc  rnncell_layout_inference_test.cc  stack_layout_inference_test.cc  stridedslice_layout_inference_test.cc
src/tim/transform/ops/: activation_layout_inference.h  addn_layout_inference.h  arg_layout_inference.h  batch2space_layout_inference.h  batchnorm_layout_inference.h  bidirectional_rnn_layout_inference.h  broadcast_layout_inference.h  concat_layout_inferene.h  conv2d_layout_inference.h  conv3d_layout_inference.h  deconv2d_layout_inference.h  default_layout_inference.h  dense_layout_inference.h  depth2space_layout_inference.h  elementwise_layout_inference.h  fullyconnected_layout_inference.h  gather_layout_inference.h  gather_nd_layout_inference.h  grouped_conv2d_layout_inference.h  (+30 more)
src/tim/utils/: CMakeLists.txt  trace_utils.cc
src/tim/vx/: CMakeLists.txt  builtin_op.cc  builtin_op_impl.cc  builtin_op_impl.h  compile_option.cc  compile_option_test.cc  context.cc  context_private.h  context_test.cc  direct_map_op.cc  direct_map_op_impl.cc  direct_map_op_impl.h  executable_set.cc  graph.cc  graph_private.h  graph_test.cc  local_device.cc  local_device_private.h  local_executable.cc  local_executor.cc  local_tensor_handle.cc  native_op.cc  native_op_impl.cc  native_op_impl.h  op_impl.cc  op_impl.h  operation.cc  operation_private.h  tensor.cc  tensor_private.h  test_utils.cc  test_utils.h  type_utils.cc  type_utils.h
toolchains/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu/: BUILD.bazel  cc_toolchain_config.bzl  toolchain.BUILD
(+2088 files in other folders)
